2009-02-13
- improved object oriented layout
- tint2 looks good for me. if you see bugs, report it.

2009-02-12
- fixed issue 14 : no icons

2009-02-11
- fixed bug with number of desktop changed
- fixed clock resize when date changed

2009-02-08
- backward compatibility with tint-0.6 (convert config file)
  feature freeze until next release. need bug correction.

2009-02-07
- better multi-monitor capability :
  -> panel_monitor = all : tint2 draw one panel per monitor
  -> panel_size = 90% 30 : panel_size accept percentage or pixel
- change notation : MULTI_MONITOR changed to SINGLE_MONITOR
  in SINGLE_MONITOR mode, tint2 draw one taskbar with tasks from current monitor
- removed sleep mode (replaced by panel_monitor = all)
- update documentation and sample config file

2009-02-03
- better fixed for Robert Escriva problem : set_panel_properties -> Reserved space
- fixed issue 13 with background detection
- fixed bug with disconnected monitor (in multi monitor mode)
- removed capability to show Window magager's menu
  it's a feature I would like, but implementation was buggy

2009-01-29
- use panel_margin parameter even with full_width
- multi_monitor mode : monitor number are ordered according to coordinate
  so taskbar on the left show task in the left monitor

2009-01-20
- change config file format : add another padding parameter
- update documentation and sample config file

2009-01-19
- patch from Robert Escriva, fixed tint2 on multi-monitor
- fixed bug between MULTI_MONITOR mode and 'task on all desktop'

2009-01-18
- update documentation for new config format
- fixed memory corruption
- fixed bug with "task on all desktop" (issue 39)

2009-01-17
- fixed drawing of active task (with new layout)

2009-01-05
- fixed decorated window with compiz

2008-12-30
- fixed bug : segfault on ConfigureNotify event

2008-11-12
- fixed bug : segfault with icon
- panel's left and right padding feel like WM background
  (right click open window managers's menu, ...)
